--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -18,6 +18,16 @@
 {% load static %}
 
 {% block content %}
+
+<head>
+
+    <meta id="myStreet" name="dbstreet" value="{{ vendor_form.street }}">
+    <meta id="myCity" name="dbcity" value="{{ vendor_form.city }}">
+    <meta id="myState" name="dbstate" value="{{ vendor_form.state }}">
+    <meta id="myZip" name="dbzip" value="{{ vendor_form.zip }}">
+
+</head>
+
 <form class='form' action="{{ post_url }}" method="post">
     {% if vendor_form.errors or errors %}
     <div class='error'>
@@ -58,7 +68,7 @@
         <input type="text" id="us3-address" onkeypress="removerEnter(event)" name="location" required="true"  disabled="disabled" />
         </div>
 
-    <!-- Fake Input address field-->
+    <!-- Dummy Input address field-->
 
         <div>
         <input type="text" id="us3-address-new" onkeypress="removerEnter(event)" required="true" disabled="disabled" />
@@ -243,10 +253,17 @@ $('#us3').locationpicker({
     }
 
 
-    $('#us3-address-new').val($('#id_street').val() + ', ' +
-                             $('#id_city').val() + ', ' +
-                             $('#id_state').val() + ',' +
-                             $('#id_zip').val());
+// var author = $('meta[name=author]').attr("content");
+
+    var newStreet = $('meta[name=dbstreet]').attr('value');
+
+
+    // var newStreet = $('#myStreet').data();
+    // var newCity = $('#myCity').data();
+    // var newState = $('#myState').data();
+    // var newZip = $('#myZip').data();
+
+    $('#us3-address-new').val(newStreet);
 
 
     function locationParam()          // For determining the location parameters.
