--- a/whats_fresh/whats_fresh_api/templates/product_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/product_ajax.html
@@ -78,7 +78,7 @@
 
     <input class='preparation' name="preparation_ids" type="hidden" />
     <div class="buttons">
-        <button type="submit" onclick="setPreparationField();">Save</button>
+        <button type="submit" onclick="setPrepField();">Save</button>   <!-- setPreparationField(),name was overlapping -->
     </div>
 </form>
 <!-- The template div used by appendPreparation() -->
@@ -115,7 +115,7 @@
         $( ".container" ).append( new_html );
         number_of_preparations++;
     }
-    function setPreparationField()
+    function setPrepField()       //Overlapping, setPreparationField()
     {
         var preparation_ids = []
         $( ".preparation_select:visible" ).each( function( index, element ){
