--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -141,9 +141,9 @@
             headers: { 'X-CSRFToken': '{{ csrf_token }}' },
             success: function(data)
             {
-                var text = JSON.stringify(data);
-                var object = JSON.parse(text);
-                alert(object["name"]);
+                // var text = JSON.stringify(data);
+                var object = JSON.parse(data);
+                alert(object);
                 // var object = JSON.parse(data);
                 alert("New Preparation saved.");
                 $("#dialog-form").dialog('close');
@@ -161,7 +161,6 @@
           });
 
             // $(".preparation_select").append( object );
-
 
        });
 
