--- a/whats_fresh/whats_fresh_api/static/css/style.scss
+++ b/whats_fresh/whats_fresh_api/static/css/style.scss
@@ -322,18 +322,18 @@ a{
     }
 }
 
-.map {
+.map-ui {
 
   width: 550px;
   height: 400px;
 
 }
 
-#loc {
+#address-checkbox {
 
     height: 21px;
     position: absolute;
     margin-left: 200px;
-    padding: 0;
+    padding-right: 100px;
 
 }
