--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -72,14 +72,13 @@
         </div>
         {% endfor %}
         {% else %}
-        <span class="no_prep">No Preparations Yet!</span>
+        <span class="no_preparations">No Preparations Yet!</span>
         {% endif %}
     </div>
 
-    <div  id="popup-preparation" class="preparation">
+    <div class="preparation">
         <a href="#" onclick="deletePreparation(this);return false;"><img class="delete" src="{% static 'delete.png' %}" />Delete</a>
-        <select disabled id="existing{{ prep.id }}" class="popup_preparation_select">
-            <option value="{{ prep.id }}">{{ prep.name }}</option>
+        <select disabled class="preparation_select">
         </select>
     </div>
 
@@ -110,8 +109,6 @@
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
 <script>
-
-    $('#popup-preparation').hide();
 
     var preparation_options = {{ json_preparations|safe }};
 
@@ -149,10 +146,16 @@
             {
                 alert("New Preparation saved.");
                 $("#dialog-form").dialog('close');
-                $('#popup-preparation').show();
+                var prepName = data["name"];
+
+                $('.preparation_select')
+                     .append($("<option></option>")
+                     .attr("value", prepName)
+                     .text(prepName));
+
+                     $('#cool').show();
+
                 $('.no_prep').hide();
-                $(".preparation_select").append( data["name"] );
-                $(".popup_preparation_select").append( data["name"] );
 
             }
           });
